parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> STARTER
Rule 1     STARTER -> INSTRUCTION_BLOCK
Rule 2     STARTER -> NEWLINE INSTRUCTION_BLOCK
Rule 3     INSTRUCTION_BLOCK -> INSTRUCTION_BLOCK INST NEWLINE
Rule 4     INSTRUCTION_BLOCK -> INST NEWLINE
Rule 5     INSTRUCTION_BLOCK -> IF_CLAUSE
Rule 6     INSTRUCTION_BLOCK -> WHILE_INSTRUCTION
Rule 7     INSTRUCTION_BLOCK -> FOR_INSTRUCTION
Rule 8     INSTRUCTION_BLOCK -> INSTRUCTION_BLOCK IF_CLAUSE
Rule 9     INSTRUCTION_BLOCK -> INSTRUCTION_BLOCK WHILE_INSTRUCTION
Rule 10    INSTRUCTION_BLOCK -> INSTRUCTION_BLOCK FOR_INSTRUCTION
Rule 11    INST -> DECLARATION
Rule 12    INST -> AFFECT
Rule 13    INST -> AFFECT_COND
Rule 14    INST -> INCR
Rule 15    INST -> DECR
Rule 16    INST -> COMMENT
Rule 17    INCR -> IDF INC integer_value
Rule 18    DECR -> IDF DEC integer_value
Rule 19    AFFECT -> IDF EQUAL EXPR
Rule 20    AFFECT -> IDF EQUAL character_value
Rule 21    DECLARATION -> TYPE AFFECT
Rule 22    DECLARATION -> DECLARATION_MULTIPLE
Rule 23    DECLARATION_MULTIPLE -> TYPE IDF
Rule 24    DECLARATION_MULTIPLE -> DECLARATION_MULTIPLE COMMA IDF
Rule 25    DECLARATION -> ARRAY_DECLARATION
Rule 26    ARRAY_DECLARATION -> TYPE IDF LBRACKET integer_value RBRACKET
Rule 27    TYPE -> INTEGER
Rule 28    TYPE -> NUMERIC
Rule 29    TYPE -> CHARACTER
Rule 30    TYPE -> LOGICAL
Rule 31    EXPR -> ARITHMETICAL_EXPRESSION
Rule 32    EXPR -> COMPARE_EXPRESSION
Rule 33    EXPR -> LOGICAL_EXPRESSION
Rule 34    ARITHMETICAL_EXPRESSION -> ARITHMETICAL_EXPRESSION ADD ARITHMETICAL_EXPRESSION
Rule 35    ARITHMETICAL_EXPRESSION -> ARITHMETICAL_EXPRESSION SUB ARITHMETICAL_EXPRESSION
Rule 36    ARITHMETICAL_EXPRESSION -> ARITHMETICAL_EXPRESSION MUL ARITHMETICAL_EXPRESSION
Rule 37    ARITHMETICAL_EXPRESSION -> ARITHMETICAL_EXPRESSION DIV ARITHMETICAL_EXPRESSION
Rule 38    ARITHMETICAL_EXPRESSION -> ARITHMETICAL_EXPRESSION MOD ARITHMETICAL_EXPRESSION
Rule 39    ARITHMETICAL_EXPRESSION -> VALUE
Rule 40    ARITHMETICAL_EXPRESSION -> IDF
Rule 41    ARITHMETICAL_EXPRESSION -> IDF LBRACKET ARITHMETICAL_EXPRESSION RBRACKET
Rule 42    ARITHMETICAL_EXPRESSION -> LPAREN ARITHMETICAL_EXPRESSION RPAREN
Rule 43    COMPARE_EXPRESSION -> ARITHMETICAL_EXPRESSION COMPARISON_OPERATOR ARITHMETICAL_EXPRESSION
Rule 44    COMPARE_EXPRESSION -> LPAREN COMPARE_EXPRESSION RPAREN
Rule 45    LOGICAL_EXPRESSION -> EXPR AND EXPR
Rule 46    LOGICAL_EXPRESSION -> EXPR OR EXPR
Rule 47    LOGICAL_EXPRESSION -> LOGICAL_VALUE
Rule 48    LOGICAL_EXPRESSION -> LPAREN LOGICAL_EXPRESSION RPAREN
Rule 49    COMPARISON_OPERATOR -> SUP
Rule 50    COMPARISON_OPERATOR -> INF
Rule 51    COMPARISON_OPERATOR -> SUPEQUAL
Rule 52    COMPARISON_OPERATOR -> INFEQUAL
Rule 53    COMPARISON_OPERATOR -> EEQUAL
Rule 54    COMPARISON_OPERATOR -> NOTEQUAL
Rule 55    LOGICAL_VALUE -> TRUE
Rule 56    LOGICAL_VALUE -> FALSE
Rule 57    VALUE -> integer_value
Rule 58    VALUE -> numeric_value
Rule 59    AFFECT_COND -> AFF_COND_EXP EXPR RPAREN
Rule 60    AFF_COND_EXP -> AFF_COND_DEB EXPR COMMA
Rule 61    AFF_COND_DEB -> IDF EQUAL LPAREN EXPR COMMA
Rule 62    IF_CLAUSE -> IF_INSTRUCTION NEWLINE
Rule 63    IF_CLAUSE -> IF_ELSE_BLOC INSTRUCTION_BLOCK RACCO NEWLINE
Rule 64    IF_INSTRUCTION -> IF_CONDITION NEWLINE LACCO NEWLINE INSTRUCTION_BLOCK RACCO
Rule 65    IF_INSTRUCTION -> ELSE_IF_CONDITION LACCO NEWLINE INSTRUCTION_BLOCK RACCO
Rule 66    IF_CONDITION -> IF LPAREN EXPR RPAREN
Rule 67    IF_ELSE_BLOC -> IF_INSTRUCTION NEWLINE ELSE NEWLINE LACCO NEWLINE
Rule 68    ELSE_IF -> IF_INSTRUCTION NEWLINE ELSE IF
Rule 69    ELSE_IF_CONDITION -> ELSE_IF LPAREN EXPR RPAREN NEWLINE
Rule 70    WHILE_INSTRUCTION -> WHILE_COND LACCO NEWLINE INSTRUCTION_BLOCK RACCO NEWLINE
Rule 71    WHILE_COND -> WHILE_START LPAREN EXPR RPAREN NEWLINE
Rule 72    WHILE_START -> WHILE
Rule 73    FOR_INSTRUCTION -> FOR_CONDITION LACCO NEWLINE INSTRUCTION_BLOCK RACCO NEWLINE
Rule 74    FOR_CONDITION -> FOR_START for_int RPAREN NEWLINE
Rule 75    FOR_START -> FOR LPAREN IDF IN for_int COLON
Rule 76    for_int -> IDF
Rule 77    for_int -> integer_value

Terminals, with rules where they appear

ADD                  : 34
AND                  : 45
CHARACTER            : 29
COLON                : 75
COMMA                : 24 60 61
COMMENT              : 16
DEC                  : 18
DIV                  : 37
EEQUAL               : 53
ELSE                 : 67 68
EQUAL                : 19 20 61
FALSE                : 56
FOR                  : 75
IDF                  : 17 18 19 20 23 24 26 40 41 61 75 76
IF                   : 66 68
IN                   : 75
INC                  : 17
INF                  : 50
INFEQUAL             : 52
INTEGER              : 27
LACCO                : 64 65 67 70 73
LBRACKET             : 26 41
LOGICAL              : 30
LPAREN               : 42 44 48 61 66 69 71 75
MOD                  : 38
MUL                  : 36
NEWLINE              : 2 3 4 62 63 64 64 65 67 67 67 68 69 70 70 71 73 73 74
NOTEQUAL             : 54
NUMERIC              : 28
OR                   : 46
RACCO                : 63 64 65 70 73
RBRACKET             : 26 41
RPAREN               : 42 44 48 59 66 69 71 74
SUB                  : 35
SUP                  : 49
SUPEQUAL             : 51
TRUE                 : 55
WHILE                : 72
character_value      : 20
error                : 
integer_value        : 17 18 26 57 77
numeric_value        : 58

Nonterminals, with rules where they appear

AFFECT               : 12 21
AFFECT_COND          : 13
AFF_COND_DEB         : 60
AFF_COND_EXP         : 59
ARITHMETICAL_EXPRESSION : 31 34 34 35 35 36 36 37 37 38 38 41 42 43 43
ARRAY_DECLARATION    : 25
COMPARE_EXPRESSION   : 32 44
COMPARISON_OPERATOR  : 43
DECLARATION          : 11
DECLARATION_MULTIPLE : 22 24
DECR                 : 15
ELSE_IF              : 69
ELSE_IF_CONDITION    : 65
EXPR                 : 19 45 45 46 46 59 60 61 66 69 71
FOR_CONDITION        : 73
FOR_INSTRUCTION      : 7 10
FOR_START            : 74
IF_CLAUSE            : 5 8
IF_CONDITION         : 64
IF_ELSE_BLOC         : 63
IF_INSTRUCTION       : 62 67 68
INCR                 : 14
INST                 : 3 4
INSTRUCTION_BLOCK    : 1 2 3 8 9 10 63 64 65 70 73
LOGICAL_EXPRESSION   : 33 48
LOGICAL_VALUE        : 47
STARTER              : 0
TYPE                 : 21 23 26
VALUE                : 39
WHILE_COND           : 70
WHILE_INSTRUCTION    : 6 9
WHILE_START          : 71
for_int              : 74 75

Parsing method: LALR

state 0

    (0) S' -> . STARTER
    (1) STARTER -> . INSTRUCTION_BLOCK
    (2) STARTER -> . NEWLINE INSTRUCTION_BLOCK
    (3) INSTRUCTION_BLOCK -> . INSTRUCTION_BLOCK INST NEWLINE
    (4) INSTRUCTION_BLOCK -> . INST NEWLINE
    (5) INSTRUCTION_BLOCK -> . IF_CLAUSE
    (6) INSTRUCTION_BLOCK -> . WHILE_INSTRUCTION
    (7) INSTRUCTION_BLOCK -> . FOR_INSTRUCTION
    (8) INSTRUCTION_BLOCK -> . INSTRUCTION_BLOCK IF_CLAUSE
    (9) INSTRUCTION_BLOCK -> . INSTRUCTION_BLOCK WHILE_INSTRUCTION
    (10) INSTRUCTION_BLOCK -> . INSTRUCTION_BLOCK FOR_INSTRUCTION
    (11) INST -> . DECLARATION
    (12) INST -> . AFFECT
    (13) INST -> . AFFECT_COND
    (14) INST -> . INCR
    (15) INST -> . DECR
    (16) INST -> . COMMENT
    (62) IF_CLAUSE -> . IF_INSTRUCTION NEWLINE
    (63) IF_CLAUSE -> . IF_ELSE_BLOC INSTRUCTION_BLOCK RACCO NEWLINE
    (70) WHILE_INSTRUCTION -> . WHILE_COND LACCO NEWLINE INSTRUCTION_BLOCK RACCO NEWLINE
    (73) FOR_INSTRUCTION -> . FOR_CONDITION LACCO NEWLINE INSTRUCTION_BLOCK RACCO NEWLINE
    (21) DECLARATION -> . TYPE AFFECT
    (22) DECLARATION -> . DECLARATION_MULTIPLE
    (25) DECLARATION -> . ARRAY_DECLARATION
    (19) AFFECT -> . IDF EQUAL EXPR
    (20) AFFECT -> . IDF EQUAL character_value
    (59) AFFECT_COND -> . AFF_COND_EXP EXPR RPAREN
    (17) INCR -> . IDF INC integer_value
    (18) DECR -> . IDF DEC integer_value
    (64) IF_INSTRUCTION -> . IF_CONDITION NEWLINE LACCO NEWLINE INSTRUCTION_BLOCK RACCO
    (65) IF_INSTRUCTION -> . ELSE_IF_CONDITION LACCO NEWLINE INSTRUCTION_BLOCK RACCO
    (67) IF_ELSE_BLOC -> . IF_INSTRUCTION NEWLINE ELSE NEWLINE LACCO NEWLINE
    (71) WHILE_COND -> . WHILE_START LPAREN EXPR RPAREN NEWLINE
    (74) FOR_CONDITION -> . FOR_START for_int RPAREN NEWLINE
    (27) TYPE -> . INTEGER
    (28) TYPE -> . NUMERIC
    (29) TYPE -> . CHARACTER
    (30) TYPE -> . LOGICAL
    (23) DECLARATION_MULTIPLE -> . TYPE IDF
    (24) DECLARATION_MULTIPLE -> . DECLARATION_MULTIPLE COMMA IDF
    (26) ARRAY_DECLARATION -> . TYPE IDF LBRACKET integer_value RBRACKET
    (60) AFF_COND_EXP -> . AFF_COND_DEB EXPR COMMA
    (66) IF_CONDITION -> . IF LPAREN EXPR RPAREN
    (69) ELSE_IF_CONDITION -> . ELSE_IF LPAREN EXPR RPAREN NEWLINE
    (72) WHILE_START -> . WHILE
    (75) FOR_START -> . FOR LPAREN IDF IN for_int COLON
    (61) AFF_COND_DEB -> . IDF EQUAL LPAREN EXPR COMMA
    (68) ELSE_IF -> . IF_INSTRUCTION NEWLINE ELSE IF

    NEWLINE         shift and go to state 3
    COMMENT         shift and go to state 13
    IDF             shift and go to state 21
    INTEGER         shift and go to state 27
    NUMERIC         shift and go to state 28
    CHARACTER       shift and go to state 29
    LOGICAL         shift and go to state 30
    IF              shift and go to state 32
    WHILE           shift and go to state 34
    FOR             shift and go to state 35

    STARTER                        shift and go to state 1
    INSTRUCTION_BLOCK              shift and go to state 2
    INST                           shift and go to state 4
    IF_CLAUSE                      shift and go to state 5
    WHILE_INSTRUCTION              shift and go to state 6
    FOR_INSTRUCTION                shift and go to state 7
    DECLARATION                    shift and go to state 8
    AFFECT                         shift and go to state 9
    AFFECT_COND                    shift and go to state 10
    INCR                           shift and go to state 11
    DECR                           shift and go to state 12
    IF_INSTRUCTION                 shift and go to state 14
    IF_ELSE_BLOC                   shift and go to state 15
    WHILE_COND                     shift and go to state 16
    FOR_CONDITION                  shift and go to state 17
    TYPE                           shift and go to state 18
    DECLARATION_MULTIPLE           shift and go to state 19
    ARRAY_DECLARATION              shift and go to state 20
    AFF_COND_EXP                   shift and go to state 22
    IF_CONDITION                   shift and go to state 23
    ELSE_IF_CONDITION              shift and go to state 24
    WHILE_START                    shift and go to state 25
    FOR_START                      shift and go to state 26
    AFF_COND_DEB                   shift and go to state 31
    ELSE_IF                        shift and go to state 33

state 1

    (0) S' -> STARTER .



state 2

    (1) STARTER -> INSTRUCTION_BLOCK .
    (3) INSTRUCTION_BLOCK -> INSTRUCTION_BLOCK . INST NEWLINE
    (8) INSTRUCTION_BLOCK -> INSTRUCTION_BLOCK . IF_CLAUSE
    (9) INSTRUCTION_BLOCK -> INSTRUCTION_BLOCK . WHILE_INSTRUCTION
    (10) INSTRUCTION_BLOCK -> INSTRUCTION_BLOCK . FOR_INSTRUCTION
    (11) INST -> . DECLARATION
    (12) INST -> . AFFECT
    (13) INST -> . AFFECT_COND
    (14) INST -> . INCR
    (15) INST -> . DECR
    (16) INST -> . COMMENT
    (62) IF_CLAUSE -> . IF_INSTRUCTION NEWLINE
    (63) IF_CLAUSE -> . IF_ELSE_BLOC INSTRUCTION_BLOCK RACCO NEWLINE
    (70) WHILE_INSTRUCTION -> . WHILE_COND LACCO NEWLINE INSTRUCTION_BLOCK RACCO NEWLINE
    (73) FOR_INSTRUCTION -> . FOR_CONDITION LACCO NEWLINE INSTRUCTION_BLOCK RACCO NEWLINE
    (21) DECLARATION -> . TYPE AFFECT
    (22) DECLARATION -> . DECLARATION_MULTIPLE
    (25) DECLARATION -> . ARRAY_DECLARATION
    (19) AFFECT -> . IDF EQUAL EXPR
    (20) AFFECT -> . IDF EQUAL character_value
    (59) AFFECT_COND -> . AFF_COND_EXP EXPR RPAREN
    (17) INCR -> . IDF INC integer_value
    (18) DECR -> . IDF DEC integer_value
    (64) IF_INSTRUCTION -> . IF_CONDITION NEWLINE LACCO NEWLINE INSTRUCTION_BLOCK RACCO
    (65) IF_INSTRUCTION -> . ELSE_IF_CONDITION LACCO NEWLINE INSTRUCTION_BLOCK RACCO
    (67) IF_ELSE_BLOC -> . IF_INSTRUCTION NEWLINE ELSE NEWLINE LACCO NEWLINE
    (71) WHILE_COND -> . WHILE_START LPAREN EXPR RPAREN NEWLINE
    (74) FOR_CONDITION -> . FOR_START for_int RPAREN NEWLINE
    (27) TYPE -> . INTEGER
    (28) TYPE -> . NUMERIC
    (29) TYPE -> . CHARACTER
    (30) TYPE -> . LOGICAL
    (23) DECLARATION_MULTIPLE -> . TYPE IDF
    (24) DECLARATION_MULTIPLE -> . DECLARATION_MULTIPLE COMMA IDF
    (26) ARRAY_DECLARATION -> . TYPE IDF LBRACKET integer_value RBRACKET
    (60) AFF_COND_EXP -> . AFF_COND_DEB EXPR COMMA
    (66) IF_CONDITION -> . IF LPAREN EXPR RPAREN
    (69) ELSE_IF_CONDITION -> . ELSE_IF LPAREN EXPR RPAREN NEWLINE
    (72) WHILE_START -> . WHILE
    (75) FOR_START -> . FOR LPAREN IDF IN for_int COLON
    (61) AFF_COND_DEB -> . IDF EQUAL LPAREN EXPR COMMA
    (68) ELSE_IF -> . IF_INSTRUCTION NEWLINE ELSE IF

    $end            reduce using rule 1 (STARTER -> INSTRUCTION_BLOCK .)
    COMMENT         shift and go to state 13
    IDF             shift and go to state 21
    INTEGER         shift and go to state 27
    NUMERIC         shift and go to state 28
    CHARACTER       shift and go to state 29
    LOGICAL         shift and go to state 30
    IF              shift and go to state 32
    WHILE           shift and go to state 34
    FOR             shift and go to state 35

    INST                           shift and go to state 36
    IF_CLAUSE                      shift and go to state 37
    WHILE_INSTRUCTION              shift and go to state 38
    FOR_INSTRUCTION                shift and go to state 39
    DECLARATION                    shift and go to state 8
    AFFECT                         shift and go to state 9
    AFFECT_COND                    shift and go to state 10
    INCR                           shift and go to state 11
    DECR                           shift and go to state 12
    IF_INSTRUCTION                 shift and go to state 14
    IF_ELSE_BLOC                   shift and go to state 15
    WHILE_COND                     shift and go to state 16
    FOR_CONDITION                  shift and go to state 17
    TYPE                           shift and go to state 18
    DECLARATION_MULTIPLE           shift and go to state 19
    ARRAY_DECLARATION              shift and go to state 20
    AFF_COND_EXP                   shift and go to state 22
    IF_CONDITION                   shift and go to state 23
    ELSE_IF_CONDITION              shift and go to state 24
    WHILE_START                    shift and go to state 25
    FOR_START                      shift and go to state 26
    AFF_COND_DEB                   shift and go to state 31
    ELSE_IF                        shift and go to state 33

state 3

    (2) STARTER -> NEWLINE . INSTRUCTION_BLOCK
    (3) INSTRUCTION_BLOCK -> . INSTRUCTION_BLOCK INST NEWLINE
    (4) INSTRUCTION_BLOCK -> . INST NEWLINE
    (5) INSTRUCTION_BLOCK -> . IF_CLAUSE
    (6) INSTRUCTION_BLOCK -> . WHILE_INSTRUCTION
    (7) INSTRUCTION_BLOCK -> . FOR_INSTRUCTION
    (8) INSTRUCTION_BLOCK -> . INSTRUCTION_BLOCK IF_CLAUSE
    (9) INSTRUCTION_BLOCK -> . INSTRUCTION_BLOCK WHILE_INSTRUCTION
    (10) INSTRUCTION_BLOCK -> . INSTRUCTION_BLOCK FOR_INSTRUCTION
    (11) INST -> . DECLARATION
    (12) INST -> . AFFECT
    (13) INST -> . AFFECT_COND
    (14) INST -> . INCR
    (15) INST -> . DECR
    (16) INST -> . COMMENT
    (62) IF_CLAUSE -> . IF_INSTRUCTION NEWLINE
    (63) IF_CLAUSE -> . IF_ELSE_BLOC INSTRUCTION_BLOCK RACCO NEWLINE
    (70) WHILE_INSTRUCTION -> . WHILE_COND LACCO NEWLINE INSTRUCTION_BLOCK RACCO NEWLINE
    (73) FOR_INSTRUCTION -> . FOR_CONDITION LACCO NEWLINE INSTRUCTION_BLOCK RACCO NEWLINE
    (21) DECLARATION -> . TYPE AFFECT
    (22) DECLARATION -> . DECLARATION_MULTIPLE
    (25) DECLARATION -> . ARRAY_DECLARATION
    (19) AFFECT -> . IDF EQUAL EXPR
    (20) AFFECT -> . IDF EQUAL character_value
    (59) AFFECT_COND -> . AFF_COND_EXP EXPR RPAREN
    (17) INCR -> . IDF INC integer_value
    (18) DECR -> . IDF DEC integer_value
    (64) IF_INSTRUCTION -> . IF_CONDITION NEWLINE LACCO NEWLINE INSTRUCTION_BLOCK RACCO
    (65) IF_INSTRUCTION -> . ELSE_IF_CONDITION LACCO NEWLINE INSTRUCTION_BLOCK RACCO
    (67) IF_ELSE_BLOC -> . IF_INSTRUCTION NEWLINE ELSE NEWLINE LACCO NEWLINE
    (71) WHILE_COND -> . WHILE_START LPAREN EXPR RPAREN NEWLINE
    (74) FOR_CONDITION -> . FOR_START for_int RPAREN NEWLINE
    (27) TYPE -> . INTEGER
    (28) TYPE -> . NUMERIC
    (29) TYPE -> . CHARACTER
    (30) TYPE -> . LOGICAL
    (23) DECLARATION_MULTIPLE -> . TYPE IDF
    (24) DECLARATION_MULTIPLE -> . DECLARATION_MULTIPLE COMMA IDF
    (26) ARRAY_DECLARATION -> . TYPE IDF LBRACKET integer_value RBRACKET
    (60) AFF_COND_EXP -> . AFF_COND_DEB EXPR COMMA
    (66) IF_CONDITION -> . IF LPAREN EXPR RPAREN
    (69) ELSE_IF_CONDITION -> . ELSE_IF LPAREN EXPR RPAREN NEWLINE
    (72) WHILE_START -> . WHILE
    (75) FOR_START -> . FOR LPAREN IDF IN for_int COLON
    (61) AFF_COND_DEB -> . IDF EQUAL LPAREN EXPR COMMA
    (68) ELSE_IF -> . IF_INSTRUCTION NEWLINE ELSE IF

    COMMENT         shift and go to state 13
    IDF             shift and go to state 21
    INTEGER         shift and go to state 27
    NUMERIC         shift and go to state 28
    CHARACTER       shift and go to state 29
    LOGICAL         shift and go to state 30
    IF              shift and go to state 32
    WHILE           shift and go to state 34
    FOR             shift and go to state 35

    INSTRUCTION_BLOCK              shift and go to state 40
    INST                           shift and go to state 4
    IF_CLAUSE                      shift and go to state 5
    WHILE_INSTRUCTION              shift and go to state 6
    FOR_INSTRUCTION                shift and go to state 7
    DECLARATION                    shift and go to state 8
    AFFECT                         shift and go to state 9
    AFFECT_COND                    shift and go to state 10
    INCR                           shift and go to state 11
    DECR                           shift and go to state 12
    IF_INSTRUCTION                 shift and go to state 14
    IF_ELSE_BLOC                   shift and go to state 15
    WHILE_COND                     shift and go to state 16
    FOR_CONDITION                  shift and go to state 17
    TYPE                           shift and go to state 18
    DECLARATION_MULTIPLE           shift and go to state 19
    ARRAY_DECLARATION              shift and go to state 20
    AFF_COND_EXP                   shift and go to state 22
    IF_CONDITION                   shift and go to state 23
    ELSE_IF_CONDITION              shift and go to state 24
    WHILE_START                    shift and go to state 25
    FOR_START                      shift and go to state 26
    AFF_COND_DEB                   shift and go to state 31
    ELSE_IF                        shift and go to state 33

state 4

    (4) INSTRUCTION_BLOCK -> INST . NEWLINE

    NEWLINE         shift and go to state 41


state 5

    (5) INSTRUCTION_BLOCK -> IF_CLAUSE .

    COMMENT         reduce using rule 5 (INSTRUCTION_BLOCK -> IF_CLAUSE .)
    IDF             reduce using rule 5 (INSTRUCTION_BLOCK -> IF_CLAUSE .)
    INTEGER         reduce using rule 5 (INSTRUCTION_BLOCK -> IF_CLAUSE .)
    NUMERIC         reduce using rule 5 (INSTRUCTION_BLOCK -> IF_CLAUSE .)
    CHARACTER       reduce using rule 5 (INSTRUCTION_BLOCK -> IF_CLAUSE .)
    LOGICAL         reduce using rule 5 (INSTRUCTION_BLOCK -> IF_CLAUSE .)
    IF              reduce using rule 5 (INSTRUCTION_BLOCK -> IF_CLAUSE .)
    WHILE           reduce using rule 5 (INSTRUCTION_BLOCK -> IF_CLAUSE .)
    FOR             reduce using rule 5 (INSTRUCTION_BLOCK -> IF_CLAUSE .)
    $end            reduce using rule 5 (INSTRUCTION_BLOCK -> IF_CLAUSE .)
    RACCO           reduce using rule 5 (INSTRUCTION_BLOCK -> IF_CLAUSE .)


state 6

    (6) INSTRUCTION_BLOCK -> WHILE_INSTRUCTION .

    COMMENT         reduce using rule 6 (INSTRUCTION_BLOCK -> WHILE_INSTRUCTION .)
    IDF             reduce using rule 6 (INSTRUCTION_BLOCK -> WHILE_INSTRUCTION .)
    INTEGER         reduce using rule 6 (INSTRUCTION_BLOCK -> WHILE_INSTRUCTION .)
    NUMERIC         reduce using rule 6 (INSTRUCTION_BLOCK -> WHILE_INSTRUCTION .)
    CHARACTER       reduce using rule 6 (INSTRUCTION_BLOCK -> WHILE_INSTRUCTION .)
    LOGICAL         reduce using rule 6 (INSTRUCTION_BLOCK -> WHILE_INSTRUCTION .)
    IF              reduce using rule 6 (INSTRUCTION_BLOCK -> WHILE_INSTRUCTION .)
    WHILE           reduce using rule 6 (INSTRUCTION_BLOCK -> WHILE_INSTRUCTION .)
    FOR             reduce using rule 6 (INSTRUCTION_BLOCK -> WHILE_INSTRUCTION .)
    $end            reduce using rule 6 (INSTRUCTION_BLOCK -> WHILE_INSTRUCTION .)
    RACCO           reduce using rule 6 (INSTRUCTION_BLOCK -> WHILE_INSTRUCTION .)


state 7

    (7) INSTRUCTION_BLOCK -> FOR_INSTRUCTION .

    COMMENT         reduce using rule 7 (INSTRUCTION_BLOCK -> FOR_INSTRUCTION .)
    IDF             reduce using rule 7 (INSTRUCTION_BLOCK -> FOR_INSTRUCTION .)
    INTEGER         reduce using rule 7 (INSTRUCTION_BLOCK -> FOR_INSTRUCTION .)
    NUMERIC         reduce using rule 7 (INSTRUCTION_BLOCK -> FOR_INSTRUCTION .)
    CHARACTER       reduce using rule 7 (INSTRUCTION_BLOCK -> FOR_INSTRUCTION .)
    LOGICAL         reduce using rule 7 (INSTRUCTION_BLOCK -> FOR_INSTRUCTION .)
    IF              reduce using rule 7 (INSTRUCTION_BLOCK -> FOR_INSTRUCTION .)
    WHILE           reduce using rule 7 (INSTRUCTION_BLOCK -> FOR_INSTRUCTION .)
    FOR             reduce using rule 7 (INSTRUCTION_BLOCK -> FOR_INSTRUCTION .)
    $end            reduce using rule 7 (INSTRUCTION_BLOCK -> FOR_INSTRUCTION .)
    RACCO           reduce using rule 7 (INSTRUCTION_BLOCK -> FOR_INSTRUCTION .)


state 8

    (11) INST -> DECLARATION .

    NEWLINE         reduce using rule 11 (INST -> DECLARATION .)


state 9

    (12) INST -> AFFECT .

    NEWLINE         reduce using rule 12 (INST -> AFFECT .)


state 10

    (13) INST -> AFFECT_COND .

    NEWLINE         reduce using rule 13 (INST -> AFFECT_COND .)


state 11

    (14) INST -> INCR .

    NEWLINE         reduce using rule 14 (INST -> INCR .)


state 12

    (15) INST -> DECR .

    NEWLINE         reduce using rule 15 (INST -> DECR .)


state 13

    (16) INST -> COMMENT .

    NEWLINE         reduce using rule 16 (INST -> COMMENT .)


state 14

    (62) IF_CLAUSE -> IF_INSTRUCTION . NEWLINE
    (67) IF_ELSE_BLOC -> IF_INSTRUCTION . NEWLINE ELSE NEWLINE LACCO NEWLINE
    (68) ELSE_IF -> IF_INSTRUCTION . NEWLINE ELSE IF

    NEWLINE         shift and go to state 42


state 15

    (63) IF_CLAUSE -> IF_ELSE_BLOC . INSTRUCTION_BLOCK RACCO NEWLINE
    (3) INSTRUCTION_BLOCK -> . INSTRUCTION_BLOCK INST NEWLINE
    (4) INSTRUCTION_BLOCK -> . INST NEWLINE
    (5) INSTRUCTION_BLOCK -> . IF_CLAUSE
    (6) INSTRUCTION_BLOCK -> . WHILE_INSTRUCTION
    (7) INSTRUCTION_BLOCK -> . FOR_INSTRUCTION
    (8) INSTRUCTION_BLOCK -> . INSTRUCTION_BLOCK IF_CLAUSE
    (9) INSTRUCTION_BLOCK -> . INSTRUCTION_BLOCK WHILE_INSTRUCTION
    (10) INSTRUCTION_BLOCK -> . INSTRUCTION_BLOCK FOR_INSTRUCTION
    (11) INST -> . DECLARATION
    (12) INST -> . AFFECT
    (13) INST -> . AFFECT_COND
    (14) INST -> . INCR
    (15) INST -> . DECR
    (16) INST -> . COMMENT
    (62) IF_CLAUSE -> . IF_INSTRUCTION NEWLINE
    (63) IF_CLAUSE -> . IF_ELSE_BLOC INSTRUCTION_BLOCK RACCO NEWLINE
    (70) WHILE_INSTRUCTION -> . WHILE_COND LACCO NEWLINE INSTRUCTION_BLOCK RACCO NEWLINE
    (73) FOR_INSTRUCTION -> . FOR_CONDITION LACCO NEWLINE INSTRUCTION_BLOCK RACCO NEWLINE
    (21) DECLARATION -> . TYPE AFFECT
    (22) DECLARATION -> . DECLARATION_MULTIPLE
    (25) DECLARATION -> . ARRAY_DECLARATION
    (19) AFFECT -> . IDF EQUAL EXPR
    (20) AFFECT -> . IDF EQUAL character_value
    (59) AFFECT_COND -> . AFF_COND_EXP EXPR RPAREN
    (17) INCR -> . IDF INC integer_value
    (18) DECR -> . IDF DEC integer_value
    (64) IF_INSTRUCTION -> . IF_CONDITION NEWLINE LACCO NEWLINE INSTRUCTION_BLOCK RACCO
    (65) IF_INSTRUCTION -> . ELSE_IF_CONDITION LACCO NEWLINE INSTRUCTION_BLOCK RACCO
    (67) IF_ELSE_BLOC -> . IF_INSTRUCTION NEWLINE ELSE NEWLINE LACCO NEWLINE
    (71) WHILE_COND -> . WHILE_START LPAREN EXPR RPAREN NEWLINE
    (74) FOR_CONDITION -> . FOR_START for_int RPAREN NEWLINE
    (27) TYPE -> . INTEGER
    (28) TYPE -> . NUMERIC
    (29) TYPE -> . CHARACTER
    (30) TYPE -> . LOGICAL
    (23) DECLARATION_MULTIPLE -> . TYPE IDF
    (24) DECLARATION_MULTIPLE -> . DECLARATION_MULTIPLE COMMA IDF
    (26) ARRAY_DECLARATION -> . TYPE IDF LBRACKET integer_value RBRACKET
    (60) AFF_COND_EXP -> . AFF_COND_DEB EXPR COMMA
    (66) IF_CONDITION -> . IF LPAREN EXPR RPAREN
    (69) ELSE_IF_CONDITION -> . ELSE_IF LPAREN EXPR RPAREN NEWLINE
    (72) WHILE_START -> . WHILE
    (75) FOR_START -> . FOR LPAREN IDF IN for_int COLON
    (61) AFF_COND_DEB -> . IDF EQUAL LPAREN EXPR COMMA
    (68) ELSE_IF -> . IF_INSTRUCTION NEWLINE ELSE IF

    COMMENT         shift and go to state 13
    IDF             shift and go to state 21
    INTEGER         shift and go to state 27
    NUMERIC         shift and go to state 28
    CHARACTER       shift and go to state 29
    LOGICAL         shift and go to state 30
    IF              shift and go to state 32
    WHILE           shift and go to state 34
    FOR             shift and go to state 35

    IF_ELSE_BLOC                   shift and go to state 15
    INSTRUCTION_BLOCK              shift and go to state 43
    INST                           shift and go to state 4
    IF_CLAUSE                      shift and go to state 5
    WHILE_INSTRUCTION              shift and go to state 6
    FOR_INSTRUCTION                shift and go to state 7
    DECLARATION                    shift and go to state 8
    AFFECT                         shift and go to state 9
    AFFECT_COND                    shift and go to state 10
    INCR                           shift and go to state 11
    DECR                           shift and go to state 12
    IF_INSTRUCTION                 shift and go to state 14
    WHILE_COND                     shift and go to state 16
    FOR_CONDITION                  shift and go to state 17
    TYPE                           shift and go to state 18
    DECLARATION_MULTIPLE           shift and go to state 19
    ARRAY_DECLARATION              shift and go to state 20
    AFF_COND_EXP                   shift and go to state 22
    IF_CONDITION                   shift and go to state 23
    ELSE_IF_CONDITION              shift and go to state 24
    WHILE_START                    shift and go to state 25
